[package]
name = "gomoku-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["Maneren"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all"] }

gomoku_lib = { git = "https://github.com/Maneren/gomoku-rust", branch = "master" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
